crates/pgls_pretty_print/tests/snapshots/multi/tests__copydml_60.snap
---
source: crates/pgls_pretty_print/tests/tests.rs
input_file: crates/pgls_pretty_print/tests/data/multi/copydml_60.sql
snapshot_kind: text
---
CREATE TABLE copydml_test ( id serial, t TEXT );

INSERT INTO copydml_test (t) VALUES ('a');

INSERT INTO copydml_test (t) VALUES ('b');

INSERT INTO copydml_test (t) VALUES ('c');

INSERT INTO copydml_test (t) VALUES ('d');

INSERT INTO copydml_test (t) VALUES ('e');

COPY (INSERT INTO copydml_test (t)
VALUES ('f')
RETURNING id) TO STDOUT;

COPY (UPDATE copydml_test
SET t = 'g'
WHERE
  t =
  'f'
RETURNING id) TO STDOUT;

COPY (DELETE FROM copydml_test
WHERE
  t =
  'g'
RETURNING id) TO STDOUT;

COPY (INSERT INTO copydml_test DEFAULT VALUES) TO STDOUT;

COPY (UPDATE copydml_test SET t = 'g') TO STDOUT;

COPY (DELETE FROM copydml_test) TO STDOUT;

CREATE RULE qqq
AS ON INSERT TO copydml_test
DO INSTEAD
  NOTHING;

COPY (INSERT INTO copydml_test DEFAULT VALUES) TO STDOUT;

DROP RULE "qqq" ON "copydml_test";

CREATE RULE qqq
AS ON INSERT TO copydml_test
DO
  DELETE FROM copydml_test;;

COPY (INSERT INTO copydml_test DEFAULT VALUES) TO STDOUT;

DROP RULE "qqq" ON "copydml_test";

CREATE RULE qqq
AS ON INSERT TO copydml_test
DO INSTEAD
  (DELETE FROM copydml_test;;
  DELETE FROM copydml_test;);

COPY (INSERT INTO copydml_test DEFAULT VALUES) TO STDOUT;

DROP RULE "qqq" ON "copydml_test";

CREATE RULE qqq
AS ON INSERT TO copydml_test WHERE
  new.t <>
  'f'
DO INSTEAD
  DELETE FROM copydml_test;;

COPY (INSERT INTO copydml_test DEFAULT VALUES) TO STDOUT;

DROP RULE "qqq" ON "copydml_test";

CREATE RULE qqq
AS ON UPDATE TO copydml_test
DO INSTEAD
  NOTHING;

COPY (UPDATE copydml_test SET t = 'f') TO STDOUT;

DROP RULE "qqq" ON "copydml_test";

CREATE RULE qqq
AS ON UPDATE TO copydml_test
DO
  DELETE FROM copydml_test;;

COPY (UPDATE copydml_test SET t = 'f') TO STDOUT;

DROP RULE "qqq" ON "copydml_test";

CREATE RULE qqq
AS ON UPDATE TO copydml_test
DO INSTEAD
  (DELETE FROM copydml_test;;
  DELETE FROM copydml_test;);

COPY (UPDATE copydml_test SET t = 'f') TO STDOUT;

DROP RULE "qqq" ON "copydml_test";

CREATE RULE qqq
AS ON UPDATE TO copydml_test WHERE
  new.t <>
  'f'
DO INSTEAD
  DELETE FROM copydml_test;;

COPY (UPDATE copydml_test SET t = 'f') TO STDOUT;

DROP RULE "qqq" ON "copydml_test";

CREATE RULE qqq
AS ON DELETE TO copydml_test
DO INSTEAD
  NOTHING;

COPY (DELETE FROM copydml_test) TO STDOUT;

DROP RULE "qqq" ON "copydml_test";

CREATE RULE qqq
AS ON DELETE TO copydml_test
DO
  INSERT INTO copydml_test DEFAULT VALUES;;

COPY (DELETE FROM copydml_test) TO STDOUT;

DROP RULE "qqq" ON "copydml_test";

CREATE RULE qqq
AS ON DELETE TO copydml_test
DO INSTEAD
  (INSERT INTO copydml_test DEFAULT VALUES;;
  INSERT INTO copydml_test DEFAULT VALUES;);

COPY (DELETE FROM copydml_test) TO STDOUT;

DROP RULE "qqq" ON "copydml_test";

CREATE RULE qqq
AS ON DELETE TO copydml_test WHERE
  old.t <>
  'f'
DO INSTEAD
  INSERT INTO copydml_test DEFAULT VALUES;;

COPY (DELETE FROM copydml_test) TO STDOUT;

DROP RULE "qqq" ON "copydml_test";

CREATE RULE qqq
AS ON INSERT TO copydml_test
DO INSTEAD
  NOTIFY "copydml_test";;

COPY (INSERT INTO copydml_test DEFAULT VALUES) TO STDOUT;

DROP RULE "qqq" ON "copydml_test";

CREATE FUNCTION
qqq_trig()
RETURNS trigger
AS '
begin
if tg_op in (''INSERT'', ''UPDATE'') then
    raise notice ''% % %'', tg_when, tg_op, new.id;
    return new;
else
    raise notice ''% % %'', tg_when, tg_op, old.id;
    return old;
end if;
end
'
LANGUAGE "plpgsql";

CREATE TRIGGER qqqbef
BEFORE
INSERT OR DELETE OR UPDATE
ON copydml_test
FOR EACH ROW
EXECUTE FUNCTION qqq_trig();

CREATE TRIGGER qqqaf
AFTER
INSERT OR DELETE OR UPDATE
ON copydml_test
FOR EACH ROW
EXECUTE FUNCTION qqq_trig();

COPY (INSERT INTO copydml_test (t)
VALUES ('f')
RETURNING id) TO STDOUT;

COPY (UPDATE copydml_test
SET t = 'g'
WHERE
  t =
  'f'
RETURNING id) TO STDOUT;

COPY (DELETE FROM copydml_test
WHERE
  t =
  'g'
RETURNING id) TO STDOUT;

DROP TABLE "copydml_test";

DROP FUNCTION qqq_trig();
