crates/pgls_pretty_print/tests/snapshots/multi/tests__create_aggregate_60.snap
---
source: crates/pgls_pretty_print/tests/tests.rs
input_file: crates/pgls_pretty_print/tests/data/multi/create_aggregate_60.sql
snapshot_kind: text
---
CREATE AGGREGATE newavg
(
  sfunc = int4_avg_accum,
  basetype = INT,
  stype = _int8,
  finalfunc = int8_avg,
  initcond1 = '{0,0}'
);

COMMENT ON AGGREGATE newavg_wrong(INT) IS 'an agg comment';

COMMENT ON AGGREGATE newavg(INT) IS 'an agg comment';

COMMENT ON AGGREGATE newavg(INT) IS NULL;

CREATE AGGREGATE newsum
(
  sfunc1 = int4pl,
  basetype = INT,
  stype1 = INT,
  initcond1 = '0'
);

CREATE AGGREGATE newcnt (*)
(
  sfunc = int8inc,
  stype = BIGINT,
  initcond = '0',
  parallel = safe
);

CREATE AGGREGATE oldcnt
(
  sfunc = int8inc,
  basetype = 'ANY',
  stype = BIGINT,
  initcond = '0'
);

CREATE AGGREGATE newcnt ("any")
(
  sfunc = int8inc_any,
  stype = BIGINT,
  initcond = '0'
);

COMMENT ON AGGREGATE nosuchagg(*) IS 'should fail';

COMMENT ON AGGREGATE newcnt(*) IS 'an agg(*) comment';

COMMENT ON AGGREGATE newcnt("any") IS 'an agg(any) comment';

CREATE FUNCTION
sum3(
  BIGINT,
  BIGINT,
  BIGINT
)
RETURNS BIGINT
AS 'select $1 + $2 + $3'
LANGUAGE "sql"
STRICT
IMMUTABLE;

CREATE AGGREGATE sum2 (BIGINT,
BIGINT)
(
  sfunc = sum3,
  stype = BIGINT,
  initcond = '0'
);

CREATE TYPE aggtype AS ( a INT, b INT, c TEXT );

CREATE FUNCTION
aggf_trans(
  aggtype[],
  INT,
  INT,
  TEXT
)
RETURNS aggtype[]
AS 'select array_append($1,ROW($2,$3,$4)::aggtype)'
LANGUAGE "sql"
STRICT
IMMUTABLE;

CREATE FUNCTION
aggfns_trans(
  aggtype[],
  INT,
  INT,
  TEXT
)
RETURNS aggtype[]
AS 'select array_append($1,ROW($2,$3,$4)::aggtype)'
LANGUAGE "sql"
IMMUTABLE;

CREATE AGGREGATE aggfstr (INT,
INT,
TEXT)
(
  sfunc = aggf_trans,
  stype = aggtype[],
  initcond = '{}'
);

CREATE AGGREGATE aggfns (INT,
INT,
TEXT)
(
  sfunc = aggfns_trans,
  stype = aggtype[],
  sspace = 10000,
  initcond = '{}'
);

CREATE FUNCTION
least_accum(
  BIGINT,
  BIGINT
)
RETURNS BIGINT
LANGUAGE "sql"
AS 'select least($1, $2)';

CREATE AGGREGATE least_agg (INT)
(
  stype = BIGINT,
  sfunc = least_accum
);

DROP FUNCTION least_accum(BIGINT, BIGINT);

CREATE FUNCTION
least_accum(
  anycompatible,
  anycompatible
)
RETURNS anycompatible
LANGUAGE "sql"
AS 'select least($1, $2)';

CREATE AGGREGATE least_agg (INT)
(
  stype = BIGINT,
  sfunc = least_accum
);

CREATE AGGREGATE least_agg (BIGINT)
(
  stype = BIGINT,
  sfunc = least_accum
);

DROP FUNCTION
least_accum(
  anycompatible,
  anycompatible) CASCADE;

CREATE FUNCTION
least_accum(
  ANYELEMENT,
  VARIADIC ANYARRAY
)
RETURNS ANYELEMENT
LANGUAGE "sql"
AS 'select least($1, min($2[i])) from generate_subscripts($2,1) g(i)';

CREATE AGGREGATE least_agg (VARIADIC "items" ANYARRAY)
(
  stype = ANYELEMENT,
  sfunc = least_accum
);

CREATE FUNCTION
cleast_accum(
  anycompatible,
  VARIADIC anycompatiblearray
)
RETURNS anycompatible
LANGUAGE "sql"
AS 'select least($1, min($2[i])) from generate_subscripts($2,1) g(i)';

CREATE AGGREGATE cleast_agg (VARIADIC "items" anycompatiblearray)
(
  stype = anycompatible,
  sfunc = cleast_accum
);

CREATE AGGREGATE my_percentile_disc (DOUBLE PRECISION,
ANYELEMENT)
(
  stype = internal,
  sfunc = ordered_set_transition,
  finalfunc = percentile_disc_final,
  finalfunc_extra = 'true',
  finalfunc_modify = read_write
);

CREATE AGGREGATE my_rank (VARIADIC "any")
(
  stype = internal,
  sfunc = ordered_set_transition_multi,
  finalfunc = rank_final,
  finalfunc_extra = 'true',
  hypothetical
);

ALTER AGGREGATE my_percentile_disc(
  DOUBLE PRECISION,
  ANYELEMENT)
RENAME TO test_percentile_disc;

ALTER AGGREGATE my_rank("any") RENAME TO test_rank;

CREATE AGGREGATE sumdouble (DOUBLE PRECISION)
(
  stype = DOUBLE PRECISION,
  sfunc = float8pl,
  mstype = DOUBLE PRECISION,
  msfunc = float8pl,
  minvfunc = float8mi
);

CREATE AGGREGATE myavg (NUMERIC)
(
  stype = internal,
  sfunc = numeric_avg_accum,
  serialfunc = numeric_avg_serialize
);

CREATE AGGREGATE myavg (NUMERIC)
(
  stype = internal,
  sfunc = numeric_avg_accum,
  serialfunc = numeric_avg_deserialize,
  deserialfunc = numeric_avg_deserialize
);

CREATE AGGREGATE myavg (NUMERIC)
(
  stype = internal,
  sfunc = numeric_avg_accum,
  serialfunc = numeric_avg_serialize,
  deserialfunc = numeric_avg_serialize
);

CREATE AGGREGATE myavg (NUMERIC)
(
  stype = internal,
  sfunc = numeric_avg_accum,
  serialfunc = numeric_avg_serialize,
  deserialfunc = numeric_avg_deserialize,
  combinefunc = int4larger
);

CREATE AGGREGATE myavg (NUMERIC)
(
  stype = internal,
  sfunc = numeric_avg_accum,
  finalfunc = numeric_avg,
  serialfunc = numeric_avg_serialize,
  deserialfunc = numeric_avg_deserialize,
  combinefunc = numeric_avg_combine,
  finalfunc_modify = shareable
);

SELECT
  aggfnoid,
  aggtransfn,
  aggcombinefn,
  CAST(aggtranstype
  AS REGTYPE),
  aggserialfn,
  aggdeserialfn,
  aggfinalmodify
FROM
  pg_aggregate
WHERE
  aggfnoid =
  CAST('myavg'
  AS REGPROC);

DROP AGGREGATE myavg(NUMERIC);

CREATE AGGREGATE myavg (NUMERIC)
(
  stype = internal,
  sfunc = numeric_avg_accum,
  finalfunc = numeric_avg
);

CREATE OR REPLACE AGGREGATE myavg (NUMERIC)
(
  stype = internal,
  sfunc = numeric_avg_accum,
  finalfunc = numeric_avg,
  serialfunc = numeric_avg_serialize,
  deserialfunc = numeric_avg_deserialize,
  combinefunc = numeric_avg_combine,
  finalfunc_modify = shareable
);

SELECT
  aggfnoid,
  aggtransfn,
  aggcombinefn,
  CAST(aggtranstype
  AS REGTYPE),
  aggserialfn,
  aggdeserialfn,
  aggfinalmodify
FROM
  pg_aggregate
WHERE
  aggfnoid =
  CAST('myavg'
  AS REGPROC);

CREATE OR REPLACE AGGREGATE myavg (NUMERIC)
(
  stype = NUMERIC,
  sfunc = numeric_add
);

SELECT
  aggfnoid,
  aggtransfn,
  aggcombinefn,
  CAST(aggtranstype
  AS REGTYPE),
  aggserialfn,
  aggdeserialfn,
  aggfinalmodify
FROM
  pg_aggregate
WHERE
  aggfnoid =
  CAST('myavg'
  AS REGPROC);

CREATE OR REPLACE AGGREGATE myavg (NUMERIC)
(
  stype = NUMERIC,
  sfunc = numeric_add,
  finalfunc = numeric_out
);

CREATE OR REPLACE AGGREGATE myavg (NUMERIC)
(
  stype = NUMERIC,
  sfunc = numeric_add
);

CREATE FUNCTION
sum4(
  BIGINT,
  BIGINT,
  BIGINT,
  BIGINT
)
RETURNS BIGINT
AS 'select $1 + $2 + $3 + $4'
LANGUAGE "sql"
STRICT
IMMUTABLE;

CREATE OR REPLACE AGGREGATE sum3 (BIGINT,
BIGINT,
BIGINT)
(
  stype = BIGINT,
  sfunc = sum4
);

DROP FUNCTION sum4(BIGINT, BIGINT, BIGINT, BIGINT);

DROP AGGREGATE myavg(NUMERIC);

CREATE AGGREGATE mysum (INT)
(
  stype = INT,
  sfunc = int4pl,
  parallel = pear
);

CREATE FUNCTION
float8mi_n(
  DOUBLE PRECISION,
  DOUBLE PRECISION
)
RETURNS DOUBLE PRECISION
AS ' SELECT $1 - $2; '
LANGUAGE "sql";

CREATE AGGREGATE invalidsumdouble (DOUBLE PRECISION)
(
  stype = DOUBLE PRECISION,
  sfunc = float8pl,
  mstype = DOUBLE PRECISION,
  msfunc = float8pl,
  minvfunc = float8mi_n
);

CREATE FUNCTION
float8mi_int(
  DOUBLE PRECISION,
  DOUBLE PRECISION
)
RETURNS INT
AS ' SELECT CAST($1 - $2 AS INT); '
LANGUAGE "sql";

CREATE AGGREGATE wrongreturntype (DOUBLE PRECISION)
(
  stype = DOUBLE PRECISION,
  sfunc = float8pl,
  mstype = DOUBLE PRECISION,
  msfunc = float8pl,
  minvfunc = float8mi_int
);

CREATE AGGREGATE case_agg
(
  "Sfunc1" = int4pl,
  "Basetype" = INT,
  "Stype1" = INT,
  "Initcond1" = '0',
  "Parallel" = safe
);

CREATE AGGREGATE case_agg (DOUBLE PRECISION)
(
  "Stype" = internal,
  "Sfunc" = ordered_set_transition,
  "Finalfunc" = percentile_disc_final,
  "Finalfunc_extra" = 'true',
  "Finalfunc_modify" = read_write,
  "Parallel" = safe
);
